# test1

./: README.md  env.yml  pyproject.toml
.github/workflows/: main.yml
src/minimal_template/: __init__.py
tests/: test_with_pytest.py
